# Thesis

./: .gitignore
backoffice/: .eslintrc.cjs  .prettierrc.json  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.json  tsconfig.node.json  (+2 more)
worker/: manage.py  pyproject.toml
worker/api/: authentications.py  backends.py
worker/api/consts/: base_consts.py
worker/api/fixtures/: carts.json  category.json  district.json  order.json  order_item.json  payment.json  payment_method.json  product.json  product_attr.json  product_category.json  product_images.json  product_sku.json  province.json  shipment.json  shipment_method.json  subcategory.json  user.json  ward.json
worker/api/migrations/: 0001_initial.py
worker/api/model/: product_ids.pkl  requirements.txt  vgg16_clothing_classifier.h5
worker/api/models/: __init__.py  address.py  cart.py  category.py  mixins.py  order.py  payment.py  product.py  setting.py  shipment.py  user.py  wishlist.py
worker/api/utils/: ai_model.py  faiss.py  jwt.py
worker/api/v1/serializers/: __init__.py  address.py  base.py  cart.py  category.py  mixin.py  order.py  payment.py  product.py  shipment.py  token.py  user.py  wishlist.py
worker/api/v1/tests/views/: test_user.py
worker/api/v1/urls/: __init__.py  backoffice.py  frontend.py
worker/api/v1/views/: __init__.py  address.py  cart.py  catetory.py  order.py  payment.py  product.py  search.py  shipment.py  token.py  user.py  wishlist.py
worker/scripts/: loaddata.sh
worker/worker/: asgi.py  db.sqlite3  urls.py  wsgi.py
worker/worker/settings/: base.py
(+357 files in other folders)
